dossier-docs/src/adoc/user-guide/8.1/dossier-user-guide.adoc
// suppress inspection "AsciiDocAttributeShouldBeDefined" for whole file
[[Dossier-user-guide]]
= {dossier}, Manuel Utilisateur
v8.1
:revnumber: 1.2
include::{sharedResource}/adoc/template.adoc[]
:revdate: {productReleaseDate}
:dossier: pass:quotes[`<span style="color:#2C8470">Arcade GED</span>`]
:favicon: {imagesDir}/icons/arcade_favicon-32x32.png

ifdef::backend-pdf[]
:title-logo-image: image:arcade-cover.png[align=center]
endif::[]


ifndef::backend-pdf[]
image::arcade-cover.png[]
endif::[]

[cols="3a,5a",options="noheader",role="tableBorder stripes-none"]
|===
|image::icons/digitech_logo_and_text.svg[align=left,role="filtered max-width-400 m-auto"]
.2+<.>|`Digitech SA` +
_ZAC Saumaty Séon - 21 av. Fernand Sardou - CS 40173 +
13322 Marseille Cedex 16_
|Copyright (c) {generatedYear} `Digitech SA`, tous droits réservés.
|===

[options="header,autowidth",width=100%]
.Notes de suivi
|===
|Date|Version|État|Objet|Rédacteur|Validateur
|01/05/2020|1.0|Validé|Création du document|[res]*S.Muscarnera*|[res]*D.Cogneau*
|07/01/2022|1.1|Validé|Version _asciidoc_|{NFE_}|
|18/09/2023|1.2|Validé|mise à jour v8.0|[res]*S.Muscarnera*|{NFE_}
|01/02/2024|1.3|En cours|mise à jour v8.1|{NFE_} {MRA_}|
|===

<<<

include::chapters/_01_introduction.adoc[]
include::chapters/_02_identification.adoc[]
include::chapters/_03_Home_Screen.adoc[]
include::chapters/_04_baskets.adoc[]
include::chapters/_05_Other_Interfaces.adoc[]
include::chapters/_06_pj_edition.adoc[]
include::chapters/_08_Document_Creation.adoc[]
include::chapters/_22_Workbooks.adoc[]
include::chapters/_09_favorites.adoc[]
include::chapters/_10_requests.adoc[]
include::chapters/_11_history.adoc[]
include::chapters/_12_clipboard.adoc[]
include::chapters/_13_search.adoc[]
include::chapters/_14_search_results.adoc[]
include::chapters/_15_document_view.adoc[]
include::chapters/_07_external_modules.adoc[]
include::chapters/_16_signature.adoc[]
include::chapters/_17_signature_book.adoc[]
include::chapters/_18_reports.adoc[]
include::chapters/_19_preferences.adoc[]
include::chapters/_20_A_Propos.adoc[]
include::chapters/_21_Shortcuts.adoc[]
